--- a/estilo_land.css
+++ b/estilo_land.css
@@ -3,7 +3,7 @@
 body, html{
     background-color: #DDDDDD;
     margin: 0%;
-    height: 100%;
+    
     font-size: 62.50%;
     color: white;
 }
@@ -11,7 +11,7 @@ body, html{
     display: flex;
     justify-content: space-between;
     padding: 0px 1%;
-    background-color: black;
+    background-color: #000000;
     
 }
 .nav_botoes{
@@ -19,8 +19,12 @@ body, html{
     justify-content: center;
     align-items: center;
     gap: 20px;
-    font-size: 30px;
+    font-size: 4em;
     list-style-type: none;
+}
+.nav_botoes a{
+    color: #DDDDDD;
+    text-decoration: none;
 }
 .hero{
     display: flex;
@@ -32,8 +36,35 @@ body, html{
     width:100%;
     background-image: linear-gradient(to right,#000000,#404040 25%,#808080 50%,#BFBFBF 75%,#FFFFFF)
 }
+#sobre_mim{
+    margin: 10em;
+    background-color: white;
+}
+#conteiner_sobre_mim{
+    display: flex;
+    font-size: 4em;
+    gap: 1em;
+    padding: 3em;
+}
+.explicaçao_sobre_mim{
+    color: #000000;
+    
+}
+.explicaçao_sobre_mim h2{
+    text-align: center;
+    font-size: 2em;
+    margin-top: 0%;
+}
 .main_contenct{
     margin: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+}
+#titulo_atuaçao{
+    text-align: center;
+    font-size: 5rem;
+    color: #000000;
 }
 #areas_de_atuaçao{
     font-size: 10em;
@@ -44,18 +75,26 @@ body, html{
     text-align: center;
 }
 .conteiner_especialidades{
+    width: 100%;
+    max-width: 2400px;
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
-    
+    gap: 20px;
 }
 .conteiner_especialidades article{
-    max-width: 440px;
     background-color: #404040;
-    padding: 10em;
-
+    width: 100%;
+    padding: 5em;
+    border-radius: 1em;
 }
+.conteiner_especialidades img{
+    width: 100%;
+}
+
 .conteudo_atuaçao{
-    font-size: 3em;
+    font-size: 2em;
+}
+.lista_info{
+    line-height: 1.4em;
 }
 
