hero_titulo-iniciada

--- a/estilo_land.css
+++ b/estilo_land.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body, html{
-    background-color: #DDDDDD;
+    background-color: #ffffff;
     margin: 0%;
     
     font-size: 62.50%;
@@ -33,20 +33,52 @@ body, html{
 }
 .background_degrade{
     display: flex;
-    justify-content: right;
+    justify-content: space-around;
+    align-items: center;
     width:100%;
     background-image: linear-gradient(to right,#000000cc,#404040 30%,#808080 60%,#BFBFBF 95%,#FFFFFF);
     box-shadow: 0px 1px 4px 0px #00000081;
+} 
+.hero_titulo{
+    display: flex;
+    flex-direction: column;
+    text-transform: uppercase;
+    gap: 1rem;
+    padding-bottom: 3rem;
+    line-height: 4rem;
+    
+}
+.hero_titulo h1{
+  font-size: 4rem;
+  font-weight: bold;
+  background: linear-gradient(to top, #A67928, #b88b2b);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.hero_titulo a{
+    font-size: 2rem;
+    color: #A67928;
+    width: fit-content;
+    padding: 2rem;
+    background-color: #00000047;
+    border-radius: 2rem;
 }
 #sobre_mim{
-    
    background-color: white;
 }
 #conteiner_sobre_mim{
     display: flex;
     font-size: 4em;
-    gap: 1em;
-    padding: 3em;
+    gap: 3em;
+    padding:  2rem 7rem 7rem 7rem;
+}
+#titulo_sobre{
+    text-align: center;
+    font-size: 5rem;
+    color: #000000;
+}
+.img_sobre{
+    border-radius: 10px;
 }
 .explicaçao_sobre_mim{
     color: #000000;
@@ -107,8 +139,8 @@ body, html{
     flex-direction: column;
     background-image: url(imagem/pexels-pavel-danilyuk-8112201\ \(1\).jpg);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position-y: 15%;
+   background-size: cover;
+   
 
 }
 .conteiner_footer{
