--- a/estilo_land.css
+++ b/estilo_land.css
@@ -15,7 +15,7 @@ body, html{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: linear-gradient(to right,#000000e5,#404040 40%,#808080 70%,#BFBFBF 95%,#FFFFFF);
+    background-image: linear-gradient(to right,#000000e5,#404040 40%,#808080 70%,#BFBFBF 98%,rgb(214, 208, 208));
     box-shadow: 0px 1px 4px 0px #00000081;
     
 }
