--- a/css/3hero.css
+++ b/css/3hero.css
@@ -1,26 +1,23 @@
 @charset "UTF-8";
 
-
-.conteiner_nav{
+/*o conteiner-hero-nav serve pra ter o degrader,e conter a nav e o hero*/
+.conteiner-hero-nav{
     display: flex;
     flex-direction: column;
     align-items: center;
     background-image: linear-gradient(to right,#000000e5,#404040 40%,#808080 70%,#BFBFBF 98%,rgb(214, 208, 208));
     box-shadow: 0px 1px 4px 0px #00000081;
-    
 }
-.hero{
-    display: flex;
-    justify-content: right;
-    
-}
-.background_degrade{
+
+/*essa parte daqui pra baixo e o hero */
+.conteiner-hero{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width:100%;
-} 
+}
+
 .hero_titulo{
+    /*o display flex muda pouca coisa*/
     display: flex;
     flex-direction: column;
     text-transform: uppercase;
@@ -31,7 +28,6 @@
 }
 .hero_titulo h1{
   font-size: 4rem;
-  font-weight: bold;
   background: var(--dourado-degrade);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
