--- a/css/1geral.css
+++ b/css/1geral.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 :root{
 
     --dourado-degrade: linear-gradient(to right, #A67928, #B98D2C);
@@ -7,9 +9,16 @@
 body, html{
     background-color: #ffffff;
     margin: 0%;
-    
     font-size: 62.50%;
-    color: white;
+    color: rgb(255, 255, 255);
+}
+h1, h2, h3{
+    font-family: 'Playfair Display';
+    text-transform: uppercase;
+}
+p, li{
+    font-family: 'lato';
+    text-transform: capitalize;
 }
 
 
