--- a/css/4Sobre.css
+++ b/css/4Sobre.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     
+    
 }
 #conteiner-titulo-sobre{
     width:fit-content;
@@ -36,6 +37,7 @@
     font-size: 4em;
     gap: 6vw;
     color: #000000;
+
 }
 #img-sobre{
     width: 47rem;
@@ -54,7 +56,8 @@
     position: relative;
     left: 11%;
     border-radius: 2rem;
-    
+      background-image: linear-gradient(to left,#000000e5,#404040 40%,#808080 70%,#BFBFBF 98%,rgb(214, 208, 208));
+    box-shadow: 0px 1px 4px 0px #00000081;
 }
 #conteiner-color-texto p{
     font-size: 2.5rem;
