--- a/css/5atuaçao.css
+++ b/css/5atuaçao.css
@@ -7,7 +7,8 @@
     
     justify-content: center;
     padding: 5vw;
-    background-color: #808080;
+     background-image: linear-gradient(to right,#000000e5,#404040 40%,#808080 70%,#BFBFBF 98%,rgb(214, 208, 208));
+    box-shadow: 0px 1px 4px 0px #00000081;
 }
 #titulo_atuaçao{
     text-align: center;
